# ai-modernization-factory

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  aimf.toml  pyproject.toml
docs/: README.md  agent-framework.md  ai-enrichment.md  architecture.md  assessment-graph.md  capabilities.md  coding-standards.md  contribution.md  incremental-assessment.md  knowledge-store.md  mcp-server.md  recommendation-engine.md  report-generation.md  repository-graph.md  roadmap.md  rule-engine.md  runtime.md
docs/analysis-intelligence/: README.md  evidence.md  incremental-rules.md  rule-authoring.md  rule-lifecycle.md  rule-platform-migration.md  shared-rule-platform.md  suppression.md  testing-rules.md
docs/architecture/: PLATFORM_ARCHITECTURE.md  PLATFORM_CAPABILITY_INVENTORY.md  README.md  ai-enrichment.md  assess-runtime-graphs.md  assessment-graph.md  html-report-v2.md  recommendation-engine.md  rule-engine.md
docs/assessment-framework/: README.md  community-enterprise-boundary.md  coverage.md  dimensions.md  evidence-and-confidence.md  examples.md  executive-narrative.md  limitations.md  methodology.md  modernization-prioritization.md  positive-evidence.md  recommendations.md  report-structure.md  rule-taxonomy.md  scoring.md  severity-and-business-impact.md  traceability.md
docs/decisions/: 0001-initial-architecture.md
docs/design/: PHASE_4_3_TECHNICAL_DEBT_INTELLIGENCE.md
docs/enterprise-knowledge-graph/: README.md  cli.md  entities.md  examples.md  graph-building.md  incremental-rebuild.md  mcp.md  provenance.md  querying.md  relationships.md  repository-resolution.md  schema-versioning.md  security.md  validation.md  workspace.md
docs/images/: README.md  report-ai-demo.html  report-deterministic-demo.html
docs/reviews/: PHASE_4_2_ACCEPTANCE_REVIEW.md  PHASE_4_3_ACCEPTANCE_REVIEW.md  PHASE_4_3_COMPLEXITY_DOGFOOD_REVIEW.md
examples/: README.md
examples/sample-js-app/: README.md  package.json
src/aimf/: __init__.py  aimf.toml  cli.py  logging_config.py  output_format.py  result_renderer.py
tests/: test_assess_cli.py  test_cli.py  test_onboarding_cli.py  test_result_renderer.py
tests/ai/: __init__.py  test_ai_context_budget.py  test_ai_model_providers.py  test_ai_recommendation_consolidation.py  test_ai_recommendation_contract.py  test_ai_recommendation_grounding.py  test_ai_recommendation_validation.py  test_aimf_tools.py  test_aws_config.py  test_llm_analysis_context.py  test_modernization_assessment_agent.py  test_modernization_prompt_builder.py
tests/application/: __init__.py
tests/cli/: test_agent_cli.py  test_architecture_report_cli.py  test_enterprise_cli.py  test_incremental_cli.py  test_rules_cli.py
(+835 files in other folders)
